Revision history for HTML::FormWidgets

         - Replaced ajaxid with check_field
         - Slider adds numeric class to textfield
         - Date no longer wraps buttons in a span. Fixes vertical alignment
         - Textarea now has mandatory rows and cols. Thanks W3C
         - Added class per cell in tables
         - Better classing for table cells
         - Made _init_options more efficient

0.13.358 2012-04-19
         - Turned CPAN testing on
         - Added more tests
         - Enhanced H::F::Cloud API
         - Bumped HTML::Accessor version dependency to 0.7
         - Updated inc::Bob to 1.3
         - Updated inc::Bob to 1.2

0.12.351 2012-03-29
         - Upped min Perl ver to 5.10
         - Funs over stopping CPAN testing
         - Updated inc::Bob. Added inc::CPANTesting
         - Bumped HTML::Accessor version dependency

0.11.347 2012-03-09
         - Fixed Menu padding when there is no content
         - Fixed Rule for Opera by adding "most" class to rest of line
         - Added form wrapper

0.10.346 2012-03-04
         - Fixed failing unordered list test. Added ordered list test

0.10.345 2012-03-03
         - Added classes hash to PopupMenu
         - Image class has subtype icon which is a span for background CSS
         - Renamed UnorderedList to List and added odered option
         - Updated Moose / Class::MOP / MRO::Compat dependencies
         - Removed CSS border art for rounded corners from Menu

0.9.336  2011-12-30
         - Added Async widget. Adds a div whose content is loaded via Ajax

0.8.334  2011-12-12
         - Fixed input field names in Table
         - Updated pod and added more tests
         - Added globals attr to separate class wide defaults from obj defaults
         - Set separator to break to have prompt appear above input field
         - Popupmenu sorts values into label order if labels are provided
         - Fields attr contains localized text strings
         - Updated inc::Bob